# cppjsconsole

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: cppjsconsole.h  globals.h
src/: cppjsconsole.cpp  globals.cpp  test.cpp
