cmake_minimum_required(VERSION 2.6)
project(cppjsconsole)
set(cppjsconsole_VERSION_MAJOR 0)
set(cppjsconsole_VERSION_MINOR 1)
set(cppjsconsole_VERSION_PATCH 0)
include_directories(include/)
add_definitions("-Wall -Wextra -O2")
add_executable(testdemo src/test.cpp)
install(FILES include/cppjsconsole.h DESTINATION include)