cmake_minimum_required(VERSION 2.6)
project(cppjsconsole)
set(cppjsconsole_VERSION_MAJOR 0)
set(cppjsconsole_VERSION_MINOR 1)
set(cppjsconsole_VERSION_PATCH 0)
include_directories(include/)
add_definitions("-Wall -Wextra -O2 -g -std=c++11 -fpermissive")
add_executable(testdemo src/test.cpp)
add_library(libcppjsconsole src/cppjsconsole.cpp)
set_target_properties(libcppjsconsole PROPERTIES PREFIX "")
set_target_properties(libcppjsconsole PROPERTIES OUTPUT_NAME "libcppjsconsole")
target_link_libraries(testdemo libcppjsconsole)
install(FILES include/cppjsconsole.h DESTINATION include)
install(TARGETS libcppjsconsole ARCHIVE DESTINATION lib)